{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 378,
  "lineage": "d0201691-decd-ec97-edd3-ff74c9358ee9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1_gui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cf93f32d548273b",
            "association_id": "eipassoc-0d1b831c5e7721e4e",
            "domain": "vpc",
            "id": "eipalloc-01cf93f32d548273b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ed61b2a31c5697e4",
            "private_dns": "ip-192-168-52-52.ec2.internal",
            "private_ip": "192.168.52.52",
            "public_dns": "ec2-44-206-53-186.compute-1.amazonaws.com",
            "public_ip": "44.206.53.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_gui",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2_gui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c1c0179dfcddcfd",
            "association_id": "eipassoc-004f1f9bfd8330c4d",
            "domain": "vpc",
            "id": "eipalloc-07c1c0179dfcddcfd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fba4357cf7b85906",
            "private_dns": "ip-192-168-83-201.ec2.internal",
            "private_ip": "192.168.83.201",
            "public_dns": "ec2-3-224-49-22.compute-1.amazonaws.com",
            "public_ip": "3.224.49.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_gui",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_gui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:internet-gateway/igw-01c0a8412e43f78f0",
            "id": "igw-01c0a8412e43f78f0",
            "owner_id": "549604368916",
            "tags": {
              "Name": "main_gui"
            },
            "tags_all": {
              "Name": "main_gui"
            },
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw1_gui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cf93f32d548273b",
            "connectivity_type": "public",
            "id": "nat-071fb2aae06844e8a",
            "network_interface_id": "eni-0ed61b2a31c5697e4",
            "private_ip": "192.168.52.52",
            "public_ip": "44.206.53.186",
            "subnet_id": "subnet-07e2197d4b523ca93",
            "tags": {
              "Name": "NATgw1_gui"
            },
            "tags_all": {
              "Name": "NATgw1_gui"
            }
          },
          "dependencies": [
            "aws_eip.nat1_gui",
            "aws_internet_gateway.main_gui",
            "aws_subnet.public_gui1_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw2_gui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c1c0179dfcddcfd",
            "connectivity_type": "public",
            "id": "nat-0727126f8c17d93a7",
            "network_interface_id": "eni-0fba4357cf7b85906",
            "private_ip": "192.168.83.201",
            "public_ip": "3.224.49.22",
            "subnet_id": "subnet-06d93c8331b4c88a9",
            "tags": {
              "Name": "NATgw2_gui"
            },
            "tags_all": {
              "Name": "NATgw2_gui"
            }
          },
          "dependencies": [
            "aws_eip.nat2_gui",
            "aws_internet_gateway.main_gui",
            "aws_subnet.public_gui2_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:route-table/rtb-0528b872e1c5041ae",
            "id": "rtb-0528b872e1c5041ae",
            "owner_id": "549604368916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-071fb2aae06844e8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1_gui",
            "aws_internet_gateway.main_gui",
            "aws_nat_gateway.NATgw1_gui",
            "aws_subnet.public_gui1_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:route-table/rtb-0cef6c16688e15a75",
            "id": "rtb-0cef6c16688e15a75",
            "owner_id": "549604368916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0727126f8c17d93a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2_gui",
            "aws_internet_gateway.main_gui",
            "aws_nat_gateway.NATgw2_gui",
            "aws_subnet.public_gui2_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:route-table/rtb-05b3a93d7740b6fbc",
            "id": "rtb-05b3a93d7740b6fbc",
            "owner_id": "549604368916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c0a8412e43f78f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_gui",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011c1c0f44987b1b5",
            "route_table_id": "rtb-0528b872e1c5041ae",
            "subnet_id": "subnet-0e8abc0be7df1aeef"
          },
          "dependencies": [
            "aws_eip.nat1_gui",
            "aws_internet_gateway.main_gui",
            "aws_nat_gateway.NATgw1_gui",
            "aws_route_table.private1",
            "aws_subnet.private_gui1_1a",
            "aws_subnet.public_gui1_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018938d2a24e49d17",
            "route_table_id": "rtb-0cef6c16688e15a75",
            "subnet_id": "subnet-0a8fb56fa6e0d6907"
          },
          "dependencies": [
            "aws_eip.nat2_gui",
            "aws_internet_gateway.main_gui",
            "aws_nat_gateway.NATgw2_gui",
            "aws_route_table.private2",
            "aws_subnet.private_gui2_1b",
            "aws_subnet.public_gui2_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd106fce3501c42",
            "route_table_id": "rtb-05b3a93d7740b6fbc",
            "subnet_id": "subnet-07e2197d4b523ca93"
          },
          "dependencies": [
            "aws_internet_gateway.main_gui",
            "aws_route_table.public",
            "aws_subnet.public_gui1_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026192cc0ee7d81f9",
            "route_table_id": "rtb-05b3a93d7740b6fbc",
            "subnet_id": "subnet-06d93c8331b4c88a9"
          },
          "dependencies": [
            "aws_internet_gateway.main_gui",
            "aws_route_table.public",
            "aws_subnet.public_gui2_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:security-group/sg-0ecb85b061ce6ce5b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecb85b061ce6ce5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "549604368916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_gui1_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:subnet/subnet-0e8abc0be7df1aeef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8abc0be7df1aeef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549604368916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_gui1_1a",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_gui1_1a",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_gui2_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:subnet/subnet-0a8fb56fa6e0d6907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8fb56fa6e0d6907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549604368916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_gui2_1b",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private_gui2_1b",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_gui1_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:subnet/subnet-07e2197d4b523ca93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e2197d4b523ca93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549604368916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_gui1_1a",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_gui1_1a",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_gui2_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:subnet/subnet-06d93c8331b4c88a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d93c8331b4c88a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549604368916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_gui2_1b",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public_gui2_1b",
              "kubernetes.io/cluster/eks-gui": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-023faa7770695e75a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549604368916:vpc/vpc-023faa7770695e75a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-099090b9eaef7dbc2",
            "default_route_table_id": "rtb-0fc396cd4aeb0e8d7",
            "default_security_group_id": "sg-05053c59ef485eab7",
            "dhcp_options_id": "dopt-75a2cd0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-023faa7770695e75a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc396cd4aeb0e8d7",
            "owner_id": "549604368916",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}